# src/controllers/review.ts
@@ -1,9 +1,10 @@
 import { RequestWithSession } from '../types/request-with-session';
 import { NextFunction, Response } from 'express';
-import { findReviews } from '../db/queries/review-queries';
+import { createReview, findReviews } from '../db/queries/review-queries';
 import { doesRestaurantExist } from '../db/queries/restaurant-queries';
 import { FoodDudeError } from '../models/food-dude-error';
 import { doesUserExist } from '../db/queries/user-queries';
+import { Review } from '../models/review';
 
 export const getReviews = async (
   req: RequestWithSession<any, any, { restaurantId: string; userId: string }>,
@@ -14,8 +15,8 @@ export const getReviews = async (
     const restaurantId = req.query.restaurantId;
     const userId = req.query.userId;
 
-    const restaurantExists = !restaurantId || await doesRestaurantExist(restaurantId);
-    const userExists = !userId || await doesUserExist(userId);
+    const restaurantExists = !restaurantId || (await doesRestaurantExist(restaurantId));
+    const userExists = !userId || (await doesUserExist(userId));
 
     if (!restaurantExists) {
       next(new FoodDudeError(`restaurant with id "${restaurantId}" does not exist`, 404));
@@ -31,9 +32,27 @@ export const getReviews = async (
 };
 
 export const addReview = async (
-    req: RequestWithSession<any, any, { restaurantId: string; userId: string }>,
-    res: Response,
-    next: NextFunction
+  req: RequestWithSession<Partial<Review>, { restaurantId: string }>,
+  res: Response,
+  next: NextFunction
 ) => {
+  try {
+    const restaurantId = req.params.restaurantId;
+    const userId = req.session.user._id;
 
+    const restaurantExists = await doesRestaurantExist(restaurantId);
+    if (!restaurantExists) {
+      next(new FoodDudeError(`restaurant with id "${restaurantId}" does not exist`, 404));
+    } else {
+      const reviewData = {
+        ...req.body,
+        restaurant: restaurantId,
+        user: userId
+      } as Review;
+      const createdReview = await createReview(reviewData);
+      res.send(createdReview);
+    }
+  } catch (e) {
+    next(e);
+  }
 };
